--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "^18.2.0",
         "react-day-picker": "^9.6.7",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.5.2",
         "react-icons": "^4.12.0",
         "tailwind-merge": "^3.2.0",
         "uuid": "^11.1.0"
